fixed navbar and partners cutoff

--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@ body {
     .content-wrapper {
         transform: scale(0.5);
     }
+
+    .partners-wrapper {
+        padding-top: 17rem;
+    }
 }
 
 @media only screen and (max-width: 800px) and (min-width: 480px) {
@@ -81,6 +85,7 @@ body {
 }
 
 #top-bar-container {
+    position: fixed;
     width: 100%;
     min-height: 5rem;
     height: 5rem;
